# Q1_26_Accel_SergZen

./: .gitmodules  README.md
escrow-litesvm/programs/anchor-escrow/src/: constants.rs  errors.rs  lib.rs
magicblock-vrf/: Anchor.toml
magicblock-vrf/programs/magicblock-vrf/src/: lib.rs
magicblock-vrf/tests/: magicblock-vrf.ts
nft-staking-core/: .gitignore  package.json
nft-staking-core/programs/nft-staking-core/src/: constants.rs  errors.rs  lib.rs
nft-staking-core/tests/: nft-staking-core.ts
pinocchio-escrow/: Cargo.toml
pinocchio-escrow/src/: lib.rs
pinocchio-escrow/src/instructions/: cancel.rs  cancel_v2.rs  make_v2.rs  mod.rs  take.rs  take_v2.rs
pinocchio-escrow/src/state/: escrow.rs
pinocchio-escrow/src/tests/: escrow_test_builder.rs  mod.rs
pinocchio-fundraiser/: Cargo.toml
pinocchio-fundraiser/src/: error.rs  lib.rs
pinocchio-fundraiser/src/instructions/: checker.rs  contribute.rs  initialize.rs  mod.rs  refund.rs
pinocchio-fundraiser/src/state/: contributor.rs  fundraiser.rs  mod.rs
pinocchio-fundraiser/src/tests/: fundraiser_test_builder.rs  mod.rs
rust-generic-storage/: Cargo.toml
rust-generic-storage/benches/: serializer_bench.rs
rust-generic-storage/src/: lib.rs  person.rs  storage.rs
rust-generic-storage/src/serializer/: borsh.rs  mod.rs  serde.rs  wincode.rs
tuktuk-escrow/: Anchor.toml
tuktuk-escrow/cron/: cron.ts
tuktuk-escrow/programs/tuktuk-escrow/: Cargo.toml
tuktuk-escrow/programs/tuktuk-escrow/src/: constants.rs  errors.rs  lib.rs
tuktuk-escrow/tests/: tuktuk-escrow.ts
tuktuk-gpt-oracle/: Anchor.toml  package.json
tuktuk-gpt-oracle/programs/tuktuk-counter/: Cargo.toml
tuktuk-gpt-oracle/programs/tuktuk-gpt-oracle/: Cargo.toml
tuktuk-gpt-oracle/programs/tuktuk-gpt-oracle/src/: constants.rs  lib.rs
tuktuk-gpt-oracle/programs/tuktuk-gpt-oracle/src/instructions/: callback_agent.rs  initialize.rs  interact_agent.rs  mod.rs  schedule.rs
tuktuk-gpt-oracle/programs/tuktuk-gpt-oracle/src/state/: agent.rs
tuktuk-gpt-oracle/tests/: tuktuk-gpt-oracle.ts
week1-challenge/: Anchor.toml  README.md
week1-challenge/programs/whitelist-transfer-hook/: Cargo.toml
week1-challenge/programs/whitelist-transfer-hook/src/: errors.rs  lib.rs
week1-challenge/programs/whitelist-vault/: Cargo.toml
week1-challenge/programs/whitelist-vault/src/: errors.rs  lib.rs
week1-challenge/programs/whitelist-vault/src/instructions/: deposit.rs  extra_metadata_account.rs  initialize.rs  mint_tokens.rs  mod.rs  transfer_hook.rs  withdraw.rs
week1-challenge/programs/whitelist-vault/src/state/: mod.rs  user_deposit.rs  vault.rs  whitelist.rs
week1-challenge/programs/whitelist-vault/src/tests/: mod.rs  whitelist_vault_test_builder.rs
whitelist-transfer-hook/: Anchor.toml  package.json
whitelist-transfer-hook/programs/whitelist-transfer-hook/src/: errors.rs  lib.rs
whitelist-transfer-hook/tests/: whitelist-transfer-hook.ts
(+44 files in other folders)
