[package]
name = "whitelist-vault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "whitelist_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
spl-discriminator = "0.4.1"
spl-transfer-hook-interface = "0.10.0"
spl-tlv-account-resolution = "0.10.0"

[dev-dependencies]
litesvm = "0.9.1"
litesvm-token = "0.9.1"
solana-sdk = "3.0"
spl-token-2022 = "8.0"
