[package]
name = "whitelist-vault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "whitelist_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
spl-transfer-hook-interface = "0.10.0"
whitelist-transfer-hook = { path = "../whitelist-transfer-hook", features = ["no-entrypoint"] }

[dev-dependencies]
litesvm = "0.9.0"
solana-sdk = "3.0.0"
solana-address = "2.1.0"
spl-token-2022 = "8.0"
spl-associated-token-account = "7.0.0"
solana-message = "3.0.0"
